seventh sprint first review

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('<%=require('./images/avatar.jpg')%>')"></div>
+      <div class="profile__image">
+      <button class="profile__image-edit" type="button"></button>
+      </div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -32,13 +34,46 @@
       © 2021 Mesto Russia
     </p>
   </footer>
+  <div class="popup popup_type_profile_image-edit">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form popup__form-new-profile_image" name="new-profile_image">
+        <input type="url" name="link" id="new-profile_image_input" class="popup__input popup__input-new-profile_image" placeholder="Ссылка на картинку" required>
+          <span class="new-profile_image_input-error popup__input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
   <div class="popup popup_type_edit">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <input 
+          type="text" 
+          name="name" 
+          id="profile__name_input" 
+          class="popup__input popup__input_type_name" 
+          placeholder="Имя" 
+          minlength="2" 
+          maxlength="40"
+          pattern="^[a-zA-Zа-яА-ЯёЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"  
+          required>
+            <span class="profile__name_input-error popup__input-error"></span>
+        <input 
+          type="text" 
+          name="description" 
+          id="profile__description_input" 
+          class="popup__input popup__input_type_description" 
+          placeholder="Занятие" 
+          minlength="2" 
+          maxlength="200" 
+          pattern="^[a-zA-Zа-яА-ЯёЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          required>
+            <span class="profile__description_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -48,8 +83,20 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <input 
+          type="text" 
+          name="place-name" 
+          id="new-place__name_input" 
+          minlength="2" 
+          maxlength="30"
+          class="popup__input popup__input_type_card-name" 
+          placeholder="Название" 
+          pattern="^[a-zA-Zа-яА-ЯёЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          required>
+          <span class="new-place__name_input-error popup__input-error"></span>
+        <input type="url" name="link" id="new-place__link_input" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+          <span class="new-place__link_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -66,11 +113,13 @@
 <template id="card-template">
   <li class="places__item card">
     <img class="card__image" src="" alt="" />
-    <button type="button" class="card__delete-button"></button>
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
+      <div class="card__description-likes">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__number-of-likes">0</span>
+      </div>
     </div>
   </li>
 </template>
