--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Обновить аватар</h3>
-      <form class="popup__form popup__form-new-profile_image" name="new-profile_image">
+      <form class="popup__form popup__form-new-profile_image" name="new-profile_image" novalidate>
         <input type="url" name="link" id="new-profile_image_input" class="popup__input popup__input-new-profile_image" placeholder="Ссылка на картинку" required>
           <span class="new-profile_image_input-error popup__input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
@@ -82,7 +82,7 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
+      <form class="popup__form" name="new-place" novalidate>
         <input 
           type="text" 
           name="place-name" 
@@ -113,6 +113,7 @@
 <template id="card-template">
   <li class="places__item card">
     <img class="card__image" src="" alt="" />
+    <button type="button" class="card__delete-button"></button>
     <div class="card__description">
       <h2 class="card__title">
       </h2>
